# kollect

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
src/: internal_macros.rs  lib.rs  linear_map.rs  linear_set.rs  ordered_map.rs  ordered_set.rs  sparse_set.rs  specialized_hashers.rs  unordered_map.rs  unordered_set.rs
src/sparse_set/: id.rs  networked_set.rs
src/tests/: ordered_map.rs  unordered_map.rs
