[package]
name = "kollect"
version = "0.4.1"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Gray Olson <gray@grayolson.com>",
]
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true
description = "Collections made ergonomic for gamedev usecases"
keywords = ["containers", "collections"]

[lints]
workspace = true

[features]
default = []
speedy = ["dep:speedy"]
serde = ["dep:serde", "indexmap/serde"]

[dependencies]
ahash = { version = "0.8.2", default-features = false, features = ["no-rng"] }
indexmap = "2.0"
serde = { version = "1.0.158", default-features = false, features = [
    "derive",
    "std",
], optional = true }
speedy = { version = "0.8", optional = true, features = ["glam"] }
rustc-hash = "1.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
